--- a/style.css
+++ b/style.css
@@ -2,16 +2,16 @@
 * multi-line comment
 */
 p{ line-height: 1em; }
-h1, h2, h3, h4{
+ h2, h3, h4{
     color: orange;
     font-weight: normal;
     line-height: 1.1em;
     margin: 0 0 .5em 0;
 }
-h1{ font-size: 1.7em; }
+h1{ font-size: 1.7em;color: green;}
 h2{ font-size: 1.5em; }
 a{
-    color: black;
+    color: green;
     text-decoration: none;
 }
 a:hover,
